--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.biggestnerd.forgedeobf</groupId>
   <artifactId>ForgeDeobf</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
